Corrected arrow vertical arrow alignment

--- a/src/Components/TrackList/TrackList.module.scss
+++ b/src/Components/TrackList/TrackList.module.scss
@@ -16,14 +16,13 @@
         gap: 200px;
         margin-bottom: 30px;
         margin-top: 70px;
-        
-    
+
         h1 {
             margin: 0 auto;
             font-size: 26px;
             text-shadow: 4px 4px 8px #000000;
         }
-    
+
         .track {
             margin: 0px auto;
             display: flex;
@@ -40,7 +39,7 @@
             background-image: url('../../../src/Images/arrow_right.png');
             background-size: cover;
             background-color:rgba(0, 0, 0, 0);
-            margin-top: 240px;
+            margin-top: 265px;
             width: 70px;
             height: 70px;
             border: none;
@@ -49,7 +48,7 @@
             background-image: url('../../../src/Images/arrow_left.png');
             background-size: cover;
             background-color:rgba(0, 0, 0, 0);
-            margin-top: 240px;
+            margin-top: 265px;
             width: 70px;
             height: 70px;
             border: none;
